<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="stop">stop</string>
    <string name="app_name">M Timer</string>
    <string name="otherswlink">market://search?q=pub:Measured+Software</string>
    <string name="use_notifications_title">Show Notifications</string>
    <string name="use_notifications_desc">Show notification when timer is set?</string>
    <string name="send_anon_stats_title">Usage Statistics</string>
    <string name="send_anon_stats_desc">Allow sending of anonymous usage statistics to developer?</string>
    <string name="alarm_vol_title">Alarm Volume</string>
    <string name="alarm_vol_desc">No alarm will sound if in silent mode.</string>
    <string name="prefs">Settings</string>
    <string name="notification_title">Timer Active</string>
    <string name="notification_extitle">Measured Timer</string>
    <string name="notification_exdesc">Timer active - tap to view</string>
    <string name="prefs_key_usenotifications">usenotifications</string>
    <string name="prefs_key_sendstats">sendstats</string>
</resources>
